[gd_scene load_steps=25 format=4 uid="uid://rlwfvff2ronp"]

[ext_resource type="Script" uid="uid://bnrhvmkw5wa5g" path="res://levels/blind-pipes/blind_pipes.gd" id="1_m4ekb"]
[ext_resource type="Texture2D" uid="uid://bg04sjs2so2nw" path="res://levels/blind-pipes/tilemap.png" id="2_7p0n7"]
[ext_resource type="Script" uid="uid://bpj3q2cg6hcfo" path="res://levels/blind-pipes/pipes.gd" id="3_2ouey"]
[ext_resource type="Shader" uid="uid://dvnim2o3heo3p" path="res://levels/blind-pipes/blind_pipes.gdshader" id="3_nhnee"]
[ext_resource type="Script" uid="uid://chkvpkhwhsmnq" path="res://levels/blind-pipes/grabber.gd" id="3_q5fug"]
[ext_resource type="Script" uid="uid://1q27u1a5qge8" path="res://levels/blind-pipes/ball.gd" id="6_nnmxe"]
[ext_resource type="Script" uid="uid://bxrskaftsou1r" path="res://levels/blind-pipes/platform.gd" id="7_cau44"]

[sub_resource type="Gradient" id="Gradient_m4ekb"]
offsets = PackedFloat32Array(0.12413793, 0.8689655)
colors = PackedColorArray(0.42889225, 0.63067865, 0.84513485, 1, 0.65098506, 0.8590315, 0.9476462, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7p0n7"]
gradient = SubResource("Gradient_m4ekb")
width = 1
height = 256
fill_from = Vector2(1, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nhnee"]
texture = ExtResource("2_7p0n7")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:2/0 = 0
19:2/0 = 0
19:1/0 = 0
18:1/0 = 0
18:0/0 = 0
19:0/0 = 0
19:3/0 = 0
19:4/0 = 0
18:3/0 = 0
18:4/0 = 0
18:5/0 = 0
18:6/0 = 0
19:6/0 = 0
19:5/0 = 0

[sub_resource type="TileSet" id="TileSet_m4ekb"]
tile_size = Vector2i(18, 18)
sources/0 = SubResource("TileSetAtlasSource_nhnee")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cau44"]
shader = ExtResource("3_nhnee")
shader_parameter/opacity = 1.0
shader_parameter/speed = 0.7
shader_parameter/amplitude = Vector2(3, 1)

[sub_resource type="Animation" id="Animation_7ih7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-576.0]
}

[sub_resource type="Animation" id="Animation_ufr1g"]
resource_name = "move_away"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [577.0, 1729.0]
}

[sub_resource type="Animation" id="Animation_cau44"]
resource_name = "move_right"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.4666667, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-576.0, 576.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufr1g"]
_data = {
&"RESET": SubResource("Animation_7ih7q"),
&"move_away": SubResource("Animation_ufr1g"),
&"move_right": SubResource("Animation_cau44")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nhnee"]
shader = ExtResource("3_nhnee")
shader_parameter/opacity = 1.0
shader_parameter/speed = 1.0
shader_parameter/amplitude = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnmxe"]
size = Vector2(52, 34)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ouey"]
shader = ExtResource("3_nhnee")
shader_parameter/opacity = 0.9
shader_parameter/speed = 1.0
shader_parameter/amplitude = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_csbsc"]
offsets = PackedFloat32Array(0, 0.7073864, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.98463047, 0.98463047, 0.98463047, 1, 0.8646751, 0.86467516, 0.8646751, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nnmxe"]
gradient = SubResource("Gradient_csbsc")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.26923078, 1)
fill_to = Vector2(1, 0.07692308)

[sub_resource type="Gradient" id="Gradient_cau44"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.41530055, 0.568306, 0.91256833)
colors = PackedColorArray(0.674554, 0.62166876, 0.6112024, 1, 0.8664693, 0.85685617, 0.763762, 1, 0.48962224, 0.48962224, 0.48962218, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7ih7q"]
gradient = SubResource("Gradient_cau44")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ufr1g"]
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
angular_velocity_min = -93.27001
angular_velocity_max = 156.22998
gravity = Vector3(0, 5, 0)
scale_min = 0.19999999
scale_max = 0.59999996
color_initial_ramp = SubResource("GradientTexture1D_7ih7q")

[node name="BlindPipes" type="Node2D"]
script = ExtResource("1_m4ekb")

[node name="CenterContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_7p0n7")

[node name="Decoration" type="TileMapLayer" parent="CenterContainer"]
texture_filter = 3
position = Vector2(592, 324)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAJAAUAAAAKAAIAAAAJAAYAAAAKAAMAAAAJAAcAAAAKAAMAAAAJAAgAAAAKAAMAAAAJAAQAAAAKAAEAAADx/wgAAAADAAQAAADw/wgAAAACAAAAAADv/wgAAAACAAAAAAAQAAgAAAACAAAAAAAPAAgAAAACAAAAAAAOAAgAAAACAAQAAAAPAAcAAAACAAQAAADw/wcAAAADAAQAAADv/wcAAAACAAAAAADy/wcAAAAFAAMAAADy/wgAAAAFAAQAAADy/wYAAAAFAAMAAADy/wUAAAAFAAMAAADy/wQAAAAFAAMAAADy/wMAAAAFAAMAAADy/wIAAAAFAAIAAAAFAAQAAAAFAAIAAAAFAAUAAAAFAAMAAAAFAAYAAAAFAAMAAAAFAAcAAAAFAAMAAAAFAAgAAAAFAAQAAAA=")
tile_set = SubResource("TileSet_m4ekb")

[node name="Grabber" type="TileMapLayer" parent="CenterContainer" node_paths=PackedStringArray("pipes", "ball")]
texture_filter = 3
position = Vector2(576, 324)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD///j/AAAIAAMAAAD///n/AAANAAMAAAD///f/AAAIAAEAAAA=")
tile_set = SubResource("TileSet_m4ekb")
script = ExtResource("3_q5fug")
pipes = NodePath("../Pipes")
ball = NodePath("../Ball")

[node name="Ball" type="Sprite2D" parent="CenterContainer" node_paths=PackedStringArray("pipes", "target_node", "particles")]
texture_filter = 3
position = Vector2(-20, -20)
texture = ExtResource("2_7p0n7")
region_enabled = true
region_rect = Rect2(54, 108, 18, 18)
script = ExtResource("6_nnmxe")
pipes = NodePath("../Pipes")
target_node = NodePath("../Platform/CollisionShape2D")
particles = NodePath("../Particles")

[node name="Pipes" type="TileMapLayer" parent="CenterContainer"]
texture_filter = 3
position = Vector2(576, 520)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD7/wAAAAAQAAQAAAD+/wAAAAAQAAQAAAABAAAAAAAQAAQAAAAEAAAAAAAQAAQAAAAEAPX/AAALAAMAAAABAPX/AAALAAMAAAD+//X/AAALAAMAAAD7//X/AAALAAMAAAA=")
tile_set = SubResource("TileSet_m4ekb")
script = ExtResource("3_2ouey")
space_between = 1
height = 9

[node name="ViewBlocker" type="TileMapLayer" parent="CenterContainer"]
texture_filter = 3
material = SubResource("ShaderMaterial_cau44")
position = Vector2(-576, 324)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD6//v/AAAHAAEAAAAFAPv/AAAHAAEAAAAFAPz/AAAHAAEAAAD6//r/AAAHAAEAAAAFAPr/AAAHAAEAAAAFAPn/AAAHAAEAAAD6//n/AAAHAAEAAAD6//z/AAAHAAEAAAD6//3/AAAHAAMAAAAFAP3/AAAHAAMAAAD5//7/AAAQAAAAAAD6//7/AAARAAAAAAD7//7/AAARAAAAAAD8//7/AAARAAAAAAD9//7/AAARAAAAAAD+//7/AAARAAAAAAD///7/AAARAAAAAAAAAP7/AAARAAAAAAABAP7/AAARAAAAAAACAP7/AAARAAAAAAADAP7/AAARAAAAAAAEAP7/AAARAAAAAAAFAP7/AAARAAAAAAD5////AAAQAAEAAAD5/wAAAAAQAAEAAAD6////AAARAAEAAAD6/wAAAAARAAEAAAD7////AAARAAEAAAD7/wAAAAARAAEAAAD8////AAARAAEAAAD8/wAAAAARAAEAAAD9////AAARAAEAAAD9/wAAAAARAAEAAAD+////AAARAAEAAAD+/wAAAAARAAEAAAD/////AAARAAEAAAD//wAAAAARAAEAAAAAAP//AAARAAEAAAAAAAAAAAARAAEAAAABAP//AAARAAEAAAABAAAAAAARAAEAAAACAP//AAARAAEAAAACAAAAAAARAAEAAAADAP//AAARAAEAAAADAAAAAAARAAEAAAAEAP//AAARAAEAAAAEAAAAAAARAAEAAAAFAP//AAARAAEAAAAFAAAAAAARAAEAAAAGAP7/AAASAAAAAAAGAP//AAASAAEAAAAGAAAAAAASAAEAAAD5/wIAAAAQAAIAAAD6/wIAAAARAAIAAAD7/wIAAAARAAIAAAD8/wIAAAARAAIAAAD9/wIAAAARAAIAAAD+/wIAAAARAAIAAAD//wIAAAARAAIAAAAAAAIAAAARAAIAAAABAAIAAAARAAIAAAACAAIAAAARAAIAAAADAAIAAAARAAIAAAAEAAIAAAARAAIAAAAFAAIAAAARAAIAAAAGAAIAAAASAAIAAAD5/wEAAAAQAAEAAAD6/wEAAAARAAEAAAD7/wEAAAARAAEAAAD8/wEAAAARAAEAAAD9/wEAAAARAAEAAAD+/wEAAAARAAEAAAD//wEAAAARAAEAAAAAAAEAAAARAAEAAAABAAEAAAARAAEAAAACAAEAAAARAAEAAAADAAEAAAARAAEAAAAEAAEAAAARAAEAAAAFAAEAAAARAAEAAAAGAAEAAAASAAEAAAA=")
tile_set = SubResource("TileSet_m4ekb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/ViewBlocker"]
libraries = {
&"": SubResource("AnimationLibrary_ufr1g")
}
autoplay = "move_away"

[node name="Platform" type="TileMapLayer" parent="CenterContainer" node_paths=PackedStringArray("pipes")]
texture_filter = 3
material = SubResource("ShaderMaterial_nhnee")
position = Vector2(576, 562)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD//wAAAAAEAAEAAAD//wEAAAAJAAAAADAAAAAAAAAFAAEAAAAAAAEAAAAJAAAAADABAAAAAAAGAAEAAAABAAEAAAAJAAAAADA=")
tile_set = SubResource("TileSet_m4ekb")
script = ExtResource("7_cau44")
pipes = NodePath("../Pipes")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/Platform"]
position = Vector2(9, 18)
shape = SubResource("RectangleShape2D_nnmxe")

[node name="Water" type="TileMapLayer" parent="CenterContainer"]
texture_filter = 3
material = SubResource("ShaderMaterial_2ouey")
position = Vector2(576, 326)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AADv/wcAAAANAAEAAADw/wcAAAANAAEAAADx/wcAAAANAAEAAADy/wcAAAANAAEAAADz/wcAAAANAAEAAAD0/wcAAAANAAEAAAD1/wcAAAANAAEAAAD2/wcAAAANAAEAAAD3/wcAAAANAAEAAAD4/wcAAAANAAEAAAD5/wcAAAANAAEAAAD6/wcAAAANAAEAAAD7/wcAAAANAAEAAAD8/wcAAAANAAEAAAD9/wcAAAANAAEAAAD+/wcAAAANAAEAAAD//wcAAAANAAEAAAAAAAcAAAANAAEAAAABAAcAAAANAAEAAAACAAcAAAANAAEAAAADAAcAAAANAAEAAAAEAAcAAAANAAEAAAAFAAcAAAANAAEAAAAGAAcAAAANAAEAAAAHAAcAAAANAAEAAAAIAAcAAAANAAEAAAAJAAcAAAANAAEAAAAKAAcAAAANAAEAAAALAAcAAAANAAEAAAAMAAcAAAANAAEAAAANAAcAAAANAAEAAAAOAAcAAAANAAEAAAAPAAcAAAANAAEAAAAQAAgAAAANAAIAAAAPAAgAAAANAAIAAAAOAAgAAAANAAIAAAANAAgAAAANAAIAAAAMAAgAAAANAAIAAAALAAgAAAANAAIAAAAKAAgAAAANAAIAAAAJAAgAAAANAAIAAAAIAAgAAAANAAIAAAAHAAgAAAANAAIAAAAGAAgAAAANAAIAAAAFAAgAAAANAAIAAAAEAAgAAAANAAIAAAADAAgAAAANAAIAAAACAAgAAAANAAIAAAABAAgAAAANAAIAAAAAAAgAAAANAAIAAAD//wgAAAANAAIAAAD+/wgAAAANAAIAAAD9/wgAAAANAAIAAAD8/wgAAAANAAIAAAD7/wgAAAANAAIAAAD6/wgAAAANAAIAAAD5/wgAAAANAAIAAAD4/wgAAAANAAIAAAD3/wgAAAANAAIAAAD2/wgAAAANAAIAAAD1/wgAAAANAAIAAAD0/wgAAAANAAIAAADz/wgAAAANAAIAAADy/wgAAAANAAIAAADx/wgAAAANAAIAAADw/wgAAAANAAIAAADv/wgAAAANAAIAAAAQAAcAAAANAAEAAADv/wkAAAANAAIAAADw/wkAAAANAAIAAADv/woAAAANAAIAAADv/wsAAAANAAIAAADv/wwAAAANAAIAAADv/w0AAAANAAIAAADv/w4AAAANAAIAAADv/w8AAAANAAIAAADv/xAAAAANAAIAAADv/xEAAAANAAIAAADv/xIAAAANAAIAAADv/xMAAAANAAIAAADv/xQAAAANAAIAAADv/xUAAAANAAIAAADv/xYAAAANAAIAAADv/xcAAAANAAIAAADv/xgAAAANAAIAAADv/xkAAAANAAIAAADv/xoAAAANAAIAAADv/xsAAAANAAIAAADv/xwAAAANAAIAAADv/x0AAAANAAIAAADv/x4AAAANAAIAAADw/woAAAANAAIAAADw/wsAAAANAAIAAADw/wwAAAANAAIAAADw/w0AAAANAAIAAADw/w4AAAANAAIAAADw/w8AAAANAAIAAADw/xAAAAANAAIAAADw/xEAAAANAAIAAADw/xIAAAANAAIAAADw/xMAAAANAAIAAADw/xQAAAANAAIAAADw/xUAAAANAAIAAADw/xYAAAANAAIAAADw/xcAAAANAAIAAADw/xgAAAANAAIAAADw/xkAAAANAAIAAADw/xoAAAANAAIAAADw/xsAAAANAAIAAADw/xwAAAANAAIAAADw/x0AAAANAAIAAADw/x4AAAANAAIAAADx/wkAAAANAAIAAADx/woAAAANAAIAAADx/wsAAAANAAIAAADx/wwAAAANAAIAAADx/w0AAAANAAIAAADx/w4AAAANAAIAAADx/w8AAAANAAIAAADx/xAAAAANAAIAAADx/xEAAAANAAIAAADx/xIAAAANAAIAAADx/xMAAAANAAIAAADx/xQAAAANAAIAAADx/xUAAAANAAIAAADx/xYAAAANAAIAAADx/xcAAAANAAIAAADx/xgAAAANAAIAAADx/xkAAAANAAIAAADx/xoAAAANAAIAAADx/xsAAAANAAIAAADx/xwAAAANAAIAAADx/x0AAAANAAIAAADx/x4AAAANAAIAAADy/wkAAAANAAIAAADy/woAAAANAAIAAADy/wsAAAANAAIAAADy/wwAAAANAAIAAADy/w0AAAANAAIAAADy/w4AAAANAAIAAADy/w8AAAANAAIAAADy/xAAAAANAAIAAADy/xEAAAANAAIAAADy/xIAAAANAAIAAADy/xMAAAANAAIAAADy/xQAAAANAAIAAADy/xUAAAANAAIAAADy/xYAAAANAAIAAADy/xcAAAANAAIAAADy/xgAAAANAAIAAADy/xkAAAANAAIAAADy/xoAAAANAAIAAADy/xsAAAANAAIAAADy/xwAAAANAAIAAADy/x0AAAANAAIAAADy/x4AAAANAAIAAADz/wkAAAANAAIAAADz/woAAAANAAIAAADz/wsAAAANAAIAAADz/wwAAAANAAIAAADz/w0AAAANAAIAAADz/w4AAAANAAIAAADz/w8AAAANAAIAAADz/xAAAAANAAIAAADz/xEAAAANAAIAAADz/xIAAAANAAIAAADz/xMAAAANAAIAAADz/xQAAAANAAIAAADz/xUAAAANAAIAAADz/xYAAAANAAIAAADz/xcAAAANAAIAAADz/xgAAAANAAIAAADz/xkAAAANAAIAAADz/xoAAAANAAIAAADz/xsAAAANAAIAAADz/xwAAAANAAIAAADz/x0AAAANAAIAAADz/x4AAAANAAIAAAD0/wkAAAANAAIAAAD0/woAAAANAAIAAAD0/wsAAAANAAIAAAD0/wwAAAANAAIAAAD0/w0AAAANAAIAAAD0/w4AAAANAAIAAAD0/w8AAAANAAIAAAD0/xAAAAANAAIAAAD0/xEAAAANAAIAAAD0/xIAAAANAAIAAAD0/xMAAAANAAIAAAD0/xQAAAANAAIAAAD0/xUAAAANAAIAAAD0/xYAAAANAAIAAAD0/xcAAAANAAIAAAD0/xgAAAANAAIAAAD0/xkAAAANAAIAAAD0/xoAAAANAAIAAAD0/xsAAAANAAIAAAD0/xwAAAANAAIAAAD0/x0AAAANAAIAAAD0/x4AAAANAAIAAAD1/wkAAAANAAIAAAD1/woAAAANAAIAAAD1/wsAAAANAAIAAAD1/wwAAAANAAIAAAD1/w0AAAANAAIAAAD1/w4AAAANAAIAAAD1/w8AAAANAAIAAAD1/xAAAAANAAIAAAD1/xEAAAANAAIAAAD1/xIAAAANAAIAAAD1/xMAAAANAAIAAAD1/xQAAAANAAIAAAD1/xUAAAANAAIAAAD1/xYAAAANAAIAAAD1/xcAAAANAAIAAAD1/xgAAAANAAIAAAD1/xkAAAANAAIAAAD1/xoAAAANAAIAAAD1/xsAAAANAAIAAAD1/xwAAAANAAIAAAD1/x0AAAANAAIAAAD1/x4AAAANAAIAAAD2/wkAAAANAAIAAAD2/woAAAANAAIAAAD2/wsAAAANAAIAAAD2/wwAAAANAAIAAAD2/w0AAAANAAIAAAD2/w4AAAANAAIAAAD2/w8AAAANAAIAAAD2/xAAAAANAAIAAAD2/xEAAAANAAIAAAD2/xIAAAANAAIAAAD2/xMAAAANAAIAAAD2/xQAAAANAAIAAAD2/xUAAAANAAIAAAD2/xYAAAANAAIAAAD2/xcAAAANAAIAAAD2/xgAAAANAAIAAAD2/xkAAAANAAIAAAD2/xoAAAANAAIAAAD2/xsAAAANAAIAAAD2/xwAAAANAAIAAAD2/x0AAAANAAIAAAD2/x4AAAANAAIAAAD3/wkAAAANAAIAAAD3/woAAAANAAIAAAD3/wsAAAANAAIAAAD3/wwAAAANAAIAAAD3/w0AAAANAAIAAAD3/w4AAAANAAIAAAD3/w8AAAANAAIAAAD3/xAAAAANAAIAAAD3/xEAAAANAAIAAAD3/xIAAAANAAIAAAD3/xMAAAANAAIAAAD3/xQAAAANAAIAAAD3/xUAAAANAAIAAAD3/xYAAAANAAIAAAD3/xcAAAANAAIAAAD3/xgAAAANAAIAAAD3/xkAAAANAAIAAAD3/xoAAAANAAIAAAD3/xsAAAANAAIAAAD3/xwAAAANAAIAAAD3/x0AAAANAAIAAAD3/x4AAAANAAIAAAD4/wkAAAANAAIAAAD4/woAAAANAAIAAAD4/wsAAAANAAIAAAD4/wwAAAANAAIAAAD4/w0AAAANAAIAAAD4/w4AAAANAAIAAAD4/w8AAAANAAIAAAD4/xAAAAANAAIAAAD4/xEAAAANAAIAAAD4/xIAAAANAAIAAAD4/xMAAAANAAIAAAD4/xQAAAANAAIAAAD4/xUAAAANAAIAAAD4/xYAAAANAAIAAAD4/xcAAAANAAIAAAD4/xgAAAANAAIAAAD4/xkAAAANAAIAAAD4/xoAAAANAAIAAAD4/xsAAAANAAIAAAD4/xwAAAANAAIAAAD4/x0AAAANAAIAAAD4/x4AAAANAAIAAAD5/wkAAAANAAIAAAD5/woAAAANAAIAAAD5/wsAAAANAAIAAAD5/wwAAAANAAIAAAD5/w0AAAANAAIAAAD5/w4AAAANAAIAAAD5/w8AAAANAAIAAAD5/xAAAAANAAIAAAD5/xEAAAANAAIAAAD5/xIAAAANAAIAAAD5/xMAAAANAAIAAAD5/xQAAAANAAIAAAD5/xUAAAANAAIAAAD5/xYAAAANAAIAAAD5/xcAAAANAAIAAAD5/xgAAAANAAIAAAD5/xkAAAANAAIAAAD5/xoAAAANAAIAAAD5/xsAAAANAAIAAAD5/xwAAAANAAIAAAD5/x0AAAANAAIAAAD5/x4AAAANAAIAAAD6/wkAAAANAAIAAAD6/woAAAANAAIAAAD6/wsAAAANAAIAAAD6/wwAAAANAAIAAAD6/w0AAAANAAIAAAD6/w4AAAANAAIAAAD6/w8AAAANAAIAAAD6/xAAAAANAAIAAAD6/xEAAAANAAIAAAD6/xIAAAANAAIAAAD6/xMAAAANAAIAAAD6/xQAAAANAAIAAAD6/xUAAAANAAIAAAD6/xYAAAANAAIAAAD6/xcAAAANAAIAAAD6/xgAAAANAAIAAAD6/xkAAAANAAIAAAD6/xoAAAANAAIAAAD6/xsAAAANAAIAAAD6/xwAAAANAAIAAAD6/x0AAAANAAIAAAD6/x4AAAANAAIAAAD7/wkAAAANAAIAAAD7/woAAAANAAIAAAD7/wsAAAANAAIAAAD7/wwAAAANAAIAAAD7/w0AAAANAAIAAAD7/w4AAAANAAIAAAD7/w8AAAANAAIAAAD7/xAAAAANAAIAAAD7/xEAAAANAAIAAAD7/xIAAAANAAIAAAD7/xMAAAANAAIAAAD7/xQAAAANAAIAAAD7/xUAAAANAAIAAAD7/xYAAAANAAIAAAD7/xcAAAANAAIAAAD7/xgAAAANAAIAAAD7/xkAAAANAAIAAAD7/xoAAAANAAIAAAD7/xsAAAANAAIAAAD7/xwAAAANAAIAAAD7/x0AAAANAAIAAAD7/x4AAAANAAIAAAD8/wkAAAANAAIAAAD8/woAAAANAAIAAAD8/wsAAAANAAIAAAD8/wwAAAANAAIAAAD8/w0AAAANAAIAAAD8/w4AAAANAAIAAAD8/w8AAAANAAIAAAD8/xAAAAANAAIAAAD8/xEAAAANAAIAAAD8/xIAAAANAAIAAAD8/xMAAAANAAIAAAD8/xQAAAANAAIAAAD8/xUAAAANAAIAAAD8/xYAAAANAAIAAAD8/xcAAAANAAIAAAD8/xgAAAANAAIAAAD8/xkAAAANAAIAAAD8/xoAAAANAAIAAAD8/xsAAAANAAIAAAD8/xwAAAANAAIAAAD8/x0AAAANAAIAAAD8/x4AAAANAAIAAAD9/wkAAAANAAIAAAD9/woAAAANAAIAAAD9/wsAAAANAAIAAAD9/wwAAAANAAIAAAD9/w0AAAANAAIAAAD9/w4AAAANAAIAAAD9/w8AAAANAAIAAAD9/xAAAAANAAIAAAD9/xEAAAANAAIAAAD9/xIAAAANAAIAAAD9/xMAAAANAAIAAAD9/xQAAAANAAIAAAD9/xUAAAANAAIAAAD9/xYAAAANAAIAAAD9/xcAAAANAAIAAAD9/xgAAAANAAIAAAD9/xkAAAANAAIAAAD9/xoAAAANAAIAAAD9/xsAAAANAAIAAAD9/xwAAAANAAIAAAD9/x0AAAANAAIAAAD9/x4AAAANAAIAAAD+/wkAAAANAAIAAAD+/woAAAANAAIAAAD+/wsAAAANAAIAAAD+/wwAAAANAAIAAAD+/w0AAAANAAIAAAD+/w4AAAANAAIAAAD+/w8AAAANAAIAAAD+/xAAAAANAAIAAAD+/xEAAAANAAIAAAD+/xIAAAANAAIAAAD+/xMAAAANAAIAAAD+/xQAAAANAAIAAAD+/xUAAAANAAIAAAD+/xYAAAANAAIAAAD+/xcAAAANAAIAAAD+/xgAAAANAAIAAAD+/xkAAAANAAIAAAD+/xoAAAANAAIAAAD+/xsAAAANAAIAAAD+/xwAAAANAAIAAAD+/x0AAAANAAIAAAD+/x4AAAANAAIAAAD//wkAAAANAAIAAAD//woAAAANAAIAAAD//wsAAAANAAIAAAD//wwAAAANAAIAAAD//w0AAAANAAIAAAD//w4AAAANAAIAAAD//w8AAAANAAIAAAD//xAAAAANAAIAAAD//xEAAAANAAIAAAD//xIAAAANAAIAAAD//xMAAAANAAIAAAD//xQAAAANAAIAAAD//xUAAAANAAIAAAD//xYAAAANAAIAAAD//xcAAAANAAIAAAD//xgAAAANAAIAAAD//xkAAAANAAIAAAD//xoAAAANAAIAAAD//xsAAAANAAIAAAD//xwAAAANAAIAAAD//x0AAAANAAIAAAD//x4AAAANAAIAAAAAAAkAAAANAAIAAAAAAAoAAAANAAIAAAAAAAsAAAANAAIAAAAAAAwAAAANAAIAAAAAAA0AAAANAAIAAAAAAA4AAAANAAIAAAAAAA8AAAANAAIAAAAAABAAAAANAAIAAAAAABEAAAANAAIAAAAAABIAAAANAAIAAAAAABMAAAANAAIAAAAAABQAAAANAAIAAAAAABUAAAANAAIAAAAAABYAAAANAAIAAAAAABcAAAANAAIAAAAAABgAAAANAAIAAAAAABkAAAANAAIAAAAAABoAAAANAAIAAAAAABsAAAANAAIAAAAAABwAAAANAAIAAAAAAB0AAAANAAIAAAAAAB4AAAANAAIAAAABAAkAAAANAAIAAAABAAoAAAANAAIAAAABAAsAAAANAAIAAAABAAwAAAANAAIAAAABAA0AAAANAAIAAAABAA4AAAANAAIAAAABAA8AAAANAAIAAAABABAAAAANAAIAAAABABEAAAANAAIAAAABABIAAAANAAIAAAABABMAAAANAAIAAAABABQAAAANAAIAAAABABUAAAANAAIAAAABABYAAAANAAIAAAABABcAAAANAAIAAAABABgAAAANAAIAAAABABkAAAANAAIAAAABABoAAAANAAIAAAABABsAAAANAAIAAAABABwAAAANAAIAAAABAB0AAAANAAIAAAABAB4AAAANAAIAAAACAAkAAAANAAIAAAACAAoAAAANAAIAAAACAAsAAAANAAIAAAACAAwAAAANAAIAAAACAA0AAAANAAIAAAACAA4AAAANAAIAAAACAA8AAAANAAIAAAACABAAAAANAAIAAAACABEAAAANAAIAAAACABIAAAANAAIAAAACABMAAAANAAIAAAACABQAAAANAAIAAAACABUAAAANAAIAAAACABYAAAANAAIAAAACABcAAAANAAIAAAACABgAAAANAAIAAAACABkAAAANAAIAAAACABoAAAANAAIAAAACABsAAAANAAIAAAACABwAAAANAAIAAAACAB0AAAANAAIAAAACAB4AAAANAAIAAAADAAkAAAANAAIAAAADAAoAAAANAAIAAAADAAsAAAANAAIAAAADAAwAAAANAAIAAAADAA0AAAANAAIAAAADAA4AAAANAAIAAAADAA8AAAANAAIAAAADABAAAAANAAIAAAADABEAAAANAAIAAAADABIAAAANAAIAAAADABMAAAANAAIAAAADABQAAAANAAIAAAADABUAAAANAAIAAAADABYAAAANAAIAAAADABcAAAANAAIAAAADABgAAAANAAIAAAADABkAAAANAAIAAAADABoAAAANAAIAAAADABsAAAANAAIAAAADABwAAAANAAIAAAADAB0AAAANAAIAAAADAB4AAAANAAIAAAAEAAkAAAANAAIAAAAEAAoAAAANAAIAAAAEAAsAAAANAAIAAAAEAAwAAAANAAIAAAAEAA0AAAANAAIAAAAEAA4AAAANAAIAAAAEAA8AAAANAAIAAAAEABAAAAANAAIAAAAEABEAAAANAAIAAAAEABIAAAANAAIAAAAEABMAAAANAAIAAAAEABQAAAANAAIAAAAEABUAAAANAAIAAAAEABYAAAANAAIAAAAEABcAAAANAAIAAAAEABgAAAANAAIAAAAEABkAAAANAAIAAAAEABoAAAANAAIAAAAEABsAAAANAAIAAAAEABwAAAANAAIAAAAEAB0AAAANAAIAAAAEAB4AAAANAAIAAAAFAAkAAAANAAIAAAAFAAoAAAANAAIAAAAFAAsAAAANAAIAAAAFAAwAAAANAAIAAAAFAA0AAAANAAIAAAAFAA4AAAANAAIAAAAFAA8AAAANAAIAAAAFABAAAAANAAIAAAAFABEAAAANAAIAAAAFABIAAAANAAIAAAAFABMAAAANAAIAAAAFABQAAAANAAIAAAAFABUAAAANAAIAAAAFABYAAAANAAIAAAAFABcAAAANAAIAAAAFABgAAAANAAIAAAAFABkAAAANAAIAAAAFABoAAAANAAIAAAAFABsAAAANAAIAAAAFABwAAAANAAIAAAAFAB0AAAANAAIAAAAFAB4AAAANAAIAAAAGAAkAAAANAAIAAAAGAAoAAAANAAIAAAAGAAsAAAANAAIAAAAGAAwAAAANAAIAAAAGAA0AAAANAAIAAAAGAA4AAAANAAIAAAAGAA8AAAANAAIAAAAGABAAAAANAAIAAAAGABEAAAANAAIAAAAGABIAAAANAAIAAAAGABMAAAANAAIAAAAGABQAAAANAAIAAAAGABUAAAANAAIAAAAGABYAAAANAAIAAAAGABcAAAANAAIAAAAGABgAAAANAAIAAAAGABkAAAANAAIAAAAGABoAAAANAAIAAAAGABsAAAANAAIAAAAGABwAAAANAAIAAAAGAB0AAAANAAIAAAAGAB4AAAANAAIAAAAHAAkAAAANAAIAAAAHAAoAAAANAAIAAAAHAAsAAAANAAIAAAAHAAwAAAANAAIAAAAHAA0AAAANAAIAAAAHAA4AAAANAAIAAAAHAA8AAAANAAIAAAAHABAAAAANAAIAAAAHABEAAAANAAIAAAAHABIAAAANAAIAAAAHABMAAAANAAIAAAAHABQAAAANAAIAAAAHABUAAAANAAIAAAAHABYAAAANAAIAAAAHABcAAAANAAIAAAAHABgAAAANAAIAAAAHABkAAAANAAIAAAAHABoAAAANAAIAAAAHABsAAAANAAIAAAAHABwAAAANAAIAAAAHAB0AAAANAAIAAAAHAB4AAAANAAIAAAAIAAkAAAANAAIAAAAIAAoAAAANAAIAAAAIAAsAAAANAAIAAAAIAAwAAAANAAIAAAAIAA0AAAANAAIAAAAIAA4AAAANAAIAAAAIAA8AAAANAAIAAAAIABAAAAANAAIAAAAIABEAAAANAAIAAAAIABIAAAANAAIAAAAIABMAAAANAAIAAAAIABQAAAANAAIAAAAIABUAAAANAAIAAAAIABYAAAANAAIAAAAIABcAAAANAAIAAAAIABgAAAANAAIAAAAIABkAAAANAAIAAAAIABoAAAANAAIAAAAIABsAAAANAAIAAAAIABwAAAANAAIAAAAIAB0AAAANAAIAAAAIAB4AAAANAAIAAAAJAAkAAAANAAIAAAAJAAoAAAANAAIAAAAJAAsAAAANAAIAAAAJAAwAAAANAAIAAAAJAA0AAAANAAIAAAAJAA4AAAANAAIAAAAJAA8AAAANAAIAAAAJABAAAAANAAIAAAAJABEAAAANAAIAAAAJABIAAAANAAIAAAAJABMAAAANAAIAAAAJABQAAAANAAIAAAAJABUAAAANAAIAAAAJABYAAAANAAIAAAAJABcAAAANAAIAAAAJABgAAAANAAIAAAAJABkAAAANAAIAAAAJABoAAAANAAIAAAAJABsAAAANAAIAAAAJABwAAAANAAIAAAAJAB0AAAANAAIAAAAJAB4AAAANAAIAAAAKAAkAAAANAAIAAAAKAAoAAAANAAIAAAAKAAsAAAANAAIAAAAKAAwAAAANAAIAAAAKAA0AAAANAAIAAAAKAA4AAAANAAIAAAAKAA8AAAANAAIAAAAKABAAAAANAAIAAAAKABEAAAANAAIAAAAKABIAAAANAAIAAAAKABMAAAANAAIAAAAKABQAAAANAAIAAAAKABUAAAANAAIAAAAKABYAAAANAAIAAAAKABcAAAANAAIAAAAKABgAAAANAAIAAAAKABkAAAANAAIAAAAKABoAAAANAAIAAAAKABsAAAANAAIAAAAKABwAAAANAAIAAAAKAB0AAAANAAIAAAAKAB4AAAANAAIAAAALAAkAAAANAAIAAAALAAoAAAANAAIAAAALAAsAAAANAAIAAAALAAwAAAANAAIAAAALAA0AAAANAAIAAAALAA4AAAANAAIAAAALAA8AAAANAAIAAAALABAAAAANAAIAAAALABEAAAANAAIAAAALABIAAAANAAIAAAALABMAAAANAAIAAAALABQAAAANAAIAAAALABUAAAANAAIAAAALABYAAAANAAIAAAALABcAAAANAAIAAAALABgAAAANAAIAAAALABkAAAANAAIAAAALABoAAAANAAIAAAALABsAAAANAAIAAAALABwAAAANAAIAAAALAB0AAAANAAIAAAALAB4AAAANAAIAAAAMAAkAAAANAAIAAAAMAAoAAAANAAIAAAAMAAsAAAANAAIAAAAMAAwAAAANAAIAAAAMAA0AAAANAAIAAAAMAA4AAAANAAIAAAAMAA8AAAANAAIAAAAMABAAAAANAAIAAAAMABEAAAANAAIAAAAMABIAAAANAAIAAAAMABMAAAANAAIAAAAMABQAAAANAAIAAAAMABUAAAANAAIAAAAMABYAAAANAAIAAAAMABcAAAANAAIAAAAMABgAAAANAAIAAAAMABkAAAANAAIAAAAMABoAAAANAAIAAAAMABsAAAANAAIAAAAMABwAAAANAAIAAAAMAB0AAAANAAIAAAAMAB4AAAANAAIAAAANAAkAAAANAAIAAAANAAoAAAANAAIAAAANAAsAAAANAAIAAAANAAwAAAANAAIAAAANAA0AAAANAAIAAAANAA4AAAANAAIAAAANAA8AAAANAAIAAAANABAAAAANAAIAAAANABEAAAANAAIAAAANABIAAAANAAIAAAANABMAAAANAAIAAAANABQAAAANAAIAAAANABUAAAANAAIAAAANABYAAAANAAIAAAANABcAAAANAAIAAAANABgAAAANAAIAAAANABkAAAANAAIAAAANABoAAAANAAIAAAANABsAAAANAAIAAAANABwAAAANAAIAAAANAB0AAAANAAIAAAANAB4AAAANAAIAAAAOAAkAAAANAAIAAAAOAAoAAAANAAIAAAAOAAsAAAANAAIAAAAOAAwAAAANAAIAAAAOAA0AAAANAAIAAAAOAA4AAAANAAIAAAAOAA8AAAANAAIAAAAOABAAAAANAAIAAAAOABEAAAANAAIAAAAOABIAAAANAAIAAAAOABMAAAANAAIAAAAOABQAAAANAAIAAAAOABUAAAANAAIAAAAOABYAAAANAAIAAAAOABcAAAANAAIAAAAOABgAAAANAAIAAAAOABkAAAANAAIAAAAOABoAAAANAAIAAAAOABsAAAANAAIAAAAOABwAAAANAAIAAAAOAB0AAAANAAIAAAAOAB4AAAANAAIAAAAPAAkAAAANAAIAAAAPAAoAAAANAAIAAAAPAAsAAAANAAIAAAAPAAwAAAANAAIAAAAPAA0AAAANAAIAAAAPAA4AAAANAAIAAAAPAA8AAAANAAIAAAAPABAAAAANAAIAAAAPABEAAAANAAIAAAAPABIAAAANAAIAAAAPABMAAAANAAIAAAAPABQAAAANAAIAAAAPABUAAAANAAIAAAAPABYAAAANAAIAAAAPABcAAAANAAIAAAAPABgAAAANAAIAAAAPABkAAAANAAIAAAAPABoAAAANAAIAAAAPABsAAAANAAIAAAAPABwAAAANAAIAAAAPAB0AAAANAAIAAAAPAB4AAAANAAIAAAAQAAkAAAANAAIAAAAQAAoAAAANAAIAAAAQAAsAAAANAAIAAAAQAAwAAAANAAIAAAAQAA0AAAANAAIAAAAQAA4AAAANAAIAAAAQAA8AAAANAAIAAAAQABAAAAANAAIAAAAQABEAAAANAAIAAAAQABIAAAANAAIAAAAQABMAAAANAAIAAAAQABQAAAANAAIAAAAQABUAAAANAAIAAAAQABYAAAANAAIAAAAQABcAAAANAAIAAAAQABgAAAANAAIAAAAQABkAAAANAAIAAAAQABoAAAANAAIAAAAQABsAAAANAAIAAAAQABwAAAANAAIAAAAQAB0AAAANAAIAAAAQAB4AAAANAAIAAAA=")
tile_set = SubResource("TileSet_m4ekb")

[node name="Particles" type="GPUParticles2D" parent="CenterContainer"]
position = Vector2(-118, 114)
emitting = false
amount = 10
texture = SubResource("GradientTexture2D_nnmxe")
one_shot = true
speed_scale = 2.5
explosiveness = 0.92
randomness = 0.23
fixed_fps = 0
interpolate = false
process_material = SubResource("ParticleProcessMaterial_ufr1g")

[connection signal="caught" from="CenterContainer/Ball" to="." method="_on_ball_caught"]
[connection signal="dropped" from="CenterContainer/Ball" to="." method="_on_ball_dropped"]
[connection signal="lost" from="CenterContainer/Ball" to="." method="_on_ball_lost"]
